# CocktailAdvisorChat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
core/: main.py
core/clients/: weaviate_client.py
core/handlers/: cocktails.py
core/schemas/: cocktail.py
core/services/: csv_reader.py  langchain.py
core/settings/: config.py
core/static/: index.html  script.js  styles.css
